# tiny-cuda-kernels

./: CMakeLists.txt  README.md
include/tck/: cuda_utils.cuh  matmul_gemm.cuh  vector_add.cuh
scripts/: build_on_jetson.sh  open_latest_ncu_report.sh  profile_on_jetson_ncu.sh  run_on_jetson.sh  sync_to_jetson.sh
src/: matmul_naive_main.cu  vector_add_main.cu
src/matmul/: 01_naive_gemm.cu
src/vector_add/: vector_add.cu
